Fix Navbar and align sidebar properly

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
   margin:0;
 }
 .container{
-  width:80%;
+  width:100%; /* Causing the elements to appear uncentered. Recommend removing. Could be problematic if website is viewed on smaller screens. */
   margin:0;
   overflow:hidden;
 }
@@ -19,7 +19,9 @@ body{
 #navbar{
   background:darkslategray;
   margin-top: 0;
-  width:100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
 #navbar ul{
   padding:0;
@@ -37,7 +39,9 @@ body{
   text-decoration: none;
   font-size: 18px;
   color: white;
-  width:25%
+
+  /* Caused the links to appear uncentered when the navbar elements were arranged. */
+  /* width:25% */ 
 
 }
 #navbar a:hover{
@@ -73,4 +77,8 @@ margin-right: 40px;
 }
 #main-footer p{
   text-align: center;
+}
+
+.content-container {
+    display: flex;
 }
